# esp32-core-node

./: CMakeLists.txt  LICENSE  README.md  partitions.csv
components/app_display/: CMakeLists.txt  app_display.c  epd_4in0e.c  epd_paint.c
components/app_display/fonts/: font12.c  font16.c  font20.c  font24.c
components/app_display/include/: app_display.h  epd_4in0e.h  epd_fonts.h  epd_paint.h  weather_icons.h
components/app_espnow/: CMakeLists.txt  app_espnow.c
components/app_espnow/include/: app_espnow.h
components/app_event/: app_event.c
components/app_event/include/: app_event.h
components/app_mqtt/: CMakeLists.txt  app_mqtt.c
components/app_mqtt/include/: app_mqtt.h
components/app_network/: CMakeLists.txt  app_network.c
components/app_network/include/: app_network.h
components/app_protocol/: CMakeLists.txt  app_protocol.c
components/app_protocol/include/: app_protocol.h
components/app_sntp/: CMakeLists.txt  app_sntp.c
components/app_sntp/include/: app_sntp.h
components/app_weather/: CMakeLists.txt  app_weather.c
components/app_weather/include/: app_weather.h
components/app_web/: CMakeLists.txt  app_web.c
components/app_web/frontend/: app.js  index.html  style.css
components/app_web/include/: app_web.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
